--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body><h1>
+    Trabalho em dupla
+</h1>
+<h2>Nathalia e Thaís</h2>
     
 </body>
 </html>
