feat: acrescentada duas novas tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Trabalho em dupla</h1>
+    <h2>Nathalia e Thaís</h2>
+    <h3>Mais uma tag</h3>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum saepe quo sit quas dignissimos illo vero a facilis iusto cum? Quibusdam aspernatur quisquam atque assumenda perspiciatis veritatis sunt molestias totam?
+    </p>
+    <table>
+        <tr>Ola</tr>
+        <td>Mais tag</td>
+    </table>
+
     
 </body>
 </html>
