index na minha feature

--- a/index.html
+++ b/index.html
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<<<<<<< HEAD
-<body><h1>
-    Trabalho em dupla
-</h1>
-<h2>Nathalia e Thaís</h2>
-=======
 <body>
     <h1>Trabalho em dupla</h1>
     <h2>Nathalia e Thaís</h2>
     <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nostrum saepe quo sit quas dignissimos illo vero a facilis iusto cum? Quibusdam aspernatur quisquam atque assumenda perspiciatis veritatis sunt molestias totam?
     </p>
->>>>>>> dfe5ded134c1b16718ea532a1b7c4a4725265dd2
+
+    <button>Click me</button>
+    <form>
+        Isso é um <form action="input" placeholder="form?"></form>
+    </form>
     
 </body>
 </html>
